[metadata]
name = logics
version = 1.1.4
author = Ariel Jonathan Roffé
author_email = arielroffe@filo.uba.ar
url = https://github.com/ariroffe/logics
description = Logics is a Python framework for mathematical logic
license = MIT
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages=find:
python_requires = >=3.6
install_requires =
    anytree >= 2.8.0

[options.packages.find]
exclude =
    tests
    tests.*
    *.tests
    *.tests.*
